--- a/.github/workflows/check-feed.yml
+++ b/.github/workflows/check-feed.yml
@@ -2,8 +2,7 @@ name: Check RSS and notify Telegram
 
 on:
   schedule:
-    # every 5 minutes
-    - cron: '*/5 * * * *'
+    - cron: '0 0 * * *' # daily at 8am SGT
   workflow_dispatch: {}
 
 jobs:
